fix: dark mode

--- a/apps/showcase/app/globals.css
+++ b/apps/showcase/app/globals.css
@@ -70,7 +70,7 @@
         background-color: #0d1224;
     }
     body:has(.feature-page) {
-        @apply bg-[url('/images/background.svg')];
+        @apply bg-[url('/images/background.svg')] dark:bg-gray-900;
     }
 }
 @layer components {
@@ -156,7 +156,7 @@
 @layer components {
     .btn {
         @apply flex cursor-pointer items-center justify-center gap-0.5 rounded-md border border-gray-200 px-2.5 py-1.5 transition-colors duration-300 ease-in-out;
-        @apply text-sm font-medium dark:border-gray-700;
+        @apply text-sm font-medium dark:border-gray-700 dark:text-gray-200 dark:hover:bg-gray-600;
     }
     .btn-primary {
         @apply bg-primary shadow-primary-100 hover:bg-primary-700 text-white;
